--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "react-icons": "^4.9.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
